# calculate

./: Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: calculate.py  main.py  models.py  validate.py
app/api/v1/routes/: get_calculations.py
app/tests/: test_calculator.py  test_main.http
