[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Rahul Singh <rahul.singh@momox.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
black = "^22.10.0"
pip = "^22.3.1"
install = "^1.3.5"
pylint = "^2.15.8"
mypy = "^0.991"
pytest = "^7.2.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

